# mimxrt1020_testing

./: Cargo.toml  build.rs
.cargo/: config
imxrt1020evk_fcb/: Cargo.toml
imxrt1020evk_fcb/src/: lib.rs
src/: main.rs
